--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+.rule {
+  @apply w-[90%] mx-auto
+}
+
+.hamburger {
+  @apply w-full h-[3px] bg-white rounded-md transition ease-in-out duration-300
+}
+
+.links {
+  @apply opacity-50
+}
+
+.links.active {
+  @apply opacity-100
+}
