--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   @apply w-full h-[3px] bg-white rounded-md transition ease-in-out duration-300
 }
 
+.nav_link {
+  @apply py-1.5
+}
+
 .links {
   @apply opacity-50
 }
