Change active link styles

--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,11 @@
 }
 
 .links {
-  @apply opacity-50
+  @apply opacity-50 md:border-b-2 border-[#1E1E1E] md:px-2 md:pb-4
 }
 
 .links.active {
-  @apply opacity-100
+  @apply opacity-100 border-white
 }
 
 .heading {
